fix a la altura de 3 pop up covers

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -353,7 +353,7 @@ p{
 	background-size: cover;
     .swiper-container {
     	background-image:
-			linear-gradient(to bottom, #00000077 0%, #00000000 25%,#00000000 75%, #00000077 100%),
+			linear-gradient(to bottom, #00000077 0%, #00000000 25%,#00000000 65%, #000000aa 100%),
 			url('') !important;
      	width: 100%;
     	height: 100%;
@@ -438,6 +438,9 @@ p{
 			p{
 				line-height: 1;
 				color: $text-light-gray;
+				@include media-breakpoint-up(sm) {
+					height: 50px;
+				}
 				@include media-breakpoint-down(sm) {
 					font-size: 18px;
 	    			line-height: 1.2;
